<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/movies_fragment_shimmer" />

                <include layout="@layout/movies_fragment_shimmer" />

                <include layout="@layout/movies_fragment_shimmer" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieDetailContainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/movieDetailAppBar"
                layout="@layout/app_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/movieContainer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDetailAppBar">

                <ImageView
                    android:id="@+id/movieImg"
                    android:contentDescription="@string/movie_content_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="10"
                app:layout_constraintTop_toBottomOf="@id/movieDetailAppBar"
                app:layout_constraintStart_toEndOf="@id/movieContainer"
                style="@style/MovieCategoryTextStyle"
                android:text="@string/movie_title"/>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toEndOf="@id/movieContainer"
                style="@style/MovieCategoryTextStyle.Body"
                android:text="@string/release_date" />

            <RatingBar
                android:id="@+id/voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RatingBar"
                android:numStars="5"
                android:scaleX=".5"
                android:scaleY=".5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@id/releaseDate" />

            <TextView
                android:id="@+id/movieOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/movieContainer"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MovieCategoryTextStyle"
                android:layout_margin="30dp"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textStart"
                style="@style/MovieCategoryTextStyle.Body.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieOverviewTitle" />

            <TextView
                android:id="@+id/similarMoviesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/movieOverview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                style="@style/MovieCategoryTextStyle"
                android:text="@string/similar_movies_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMoviesRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similarMoviesTitle"
                tools:listitem="@layout/movie_item"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>